--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=Percetakan
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:paaw6LvqGRvfotihfYecGx6jpcdRnSLgKneY9lZUmxw=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost/percetakan
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=percetakan
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -28,13 +28,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
+MAIL_HOST=mailhog
 MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_ENCRYPTION=    
+MAIL_FROM_ADDRESS=testing@bikinweeb.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -51,9 +52,18 @@ PUSHER_PORT=443
 PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
 
+
+
+
 VITE_APP_NAME="${APP_NAME}"
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+MIDTRANS_MERCHANT_ID=G844163108
+MIDTRANS_CLIENT_KEY=SB-Mid-client-1EnLL4q0UxFCZngF
+MIDTRANS_SERVER_KEY=SB-Mid-server-gvAaLn0st_f5mo9JZ5TOrO3R
+MIDTRANS_IS_PRODUCTION=false
+MIDTRANS_SNAP_URL=https://app.sandbox.midtrans.com/snap/snap.js
